# ray

./: .gitignore  CMakeLists.txt  README.txt  ray-solution-macos  ray-solution-r2  raycheck-c.py
raycheck.out/stdio/: cone.out  cylinder.out  easy2.out  hitchcock.out  reflection.out  reflection1.out  reflection2.out  scene.out  scene_blank.out  scene_mirror.out  sphere.out  sphere1.out  sphere_box.out  spheres.out  spheres1.out  spheres_test1.out  tentacles.out  texture_box_png.out  trans.out
raycheck.out/stdio/custom/: sphere_refract4.out
raycheck.out/stdio/polymesh/: cube.out  dragon.out  dragon1.out  dragon2.out  dragon3.out  easy1.out  easy3.out  easy3a.out  easy4.out  easy5.out  recurse_depth.out  shell.out  sier.out  simple.out  trimesh1.out  trimesh2.out  trimesh3.out  turtle.out  z-polytest.out
raycheck.out/stdio/simple/: box.out  box_cyl_opaque_shadow.out  box_cyl_reflect.out  box_cyl_transp_shadow.out  box_dist_atten.out  cyl_ambient.out  cyl_diff_spec.out  cyl_diffuse.out  cyl_emissive.out  cylinder_refract.out  cylinder_refract_simple.out  sphere_reflect.out  sphere_refract.out  sphere_refract2.out  sphere_refract3.out  sphere_refract4.out  sphere_refract5.out  sphere_refract6.out  sphere_refract7.out  sphere_refract_simple.out
src/: CMakeLists.txt  RayTracer.cpp  RayTracer.h
src/SceneObjects/: trimesh.cpp  trimesh.h
src/scene/: bbox.h  cubeMap.cpp  kdTree.cpp  kdTree.h  light.cpp  material.cpp  scene.cpp  scene.h
src/utils/: ThreadPool.cpp  ThreadPool.h  tasks.cpp  tasks.h
